--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -7,7 +7,10 @@
 
 html,
 body {
+  /*.........................
+  ==> unwanted scroll bar
   width: 100%;
   height: 100%;
+  ...........................*/
   background-color: #f4f4f9;
 }
