--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -14,3 +14,13 @@ body {
   ...........................*/
   background-color: #f4f4f9;
 }
+
+/* ======= main container ======== */
+main{
+  max-width: 600px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
