--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -46,3 +46,61 @@ nav button {
 nav button:hover {
   background-color: #0056b3;
 }
+
+/* Home Section */
+.Home h1 {
+  text-align: center;
+  font-size: 1.7rem;
+  padding: 10px;
+  border-radius: 5px;
+  margin: 1px 1px 13px 1px;
+  background-color: #f6f9f551;
+  color: #0742e4d1;
+  background-color:#fff;
+  border: 1px solid;
+}
+.Home input {
+  width: calc(100% - 0px);
+  padding: 12px;
+  border: 1px solid #ccc;
+  outline: none;
+  font-size: 16px;
+}
+.Home .message {
+  font-size: 0.7rem;
+  margin: 2px 9px 5px 5px;
+}
+.Home button {
+  padding: 12px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  background-color: #28a745;
+  color: white;
+  transition: background-color 0.3s;
+}
+
+.Home button:hover {
+  background-color: #218838;
+}
+
+.Home .output {
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #e9ecef;
+  border-radius: 4px;
+}
+
+.Home .output p {
+  margin: 10px 0;
+  font-size: 16px;
+}
+
+.Home .output button {
+  background-color: #17a2b8;
+  transition: background-color 0.3s;
+}
+.Home .output button:hover {
+  background-color: #117a8b;
+}
